--- a/.forceignore
+++ b/.forceignore
@@ -7,6 +7,8 @@ package.xml
 # LWC configuration files
 **/jsconfig.json
 **/.eslintrc.json
+**profiles
+**CustomApplication
 
 # LWC Jest
 **/__tests__/**
