Tabs and user selection functionality working

--- a/.forceignore
+++ b/.forceignore
@@ -9,6 +9,7 @@ package.xml
 **/.eslintrc.json
 **profiles
 **CustomApplication
+force-app/main/default/applications/standard__LightningSales.app-meta.xml
 
 # LWC Jest
 **/__tests__/**
