Package version 0.4.0.1 2nd May 2020

--- a/.forceignore
+++ b/.forceignore
@@ -10,7 +10,11 @@ package.xml
 **profiles
 **CustomApplication
 force-app/main/default/applications/standard__LightningSales.app-meta.xml
-**flexipage
+**flexipage**
+**Group**
+**ListView**
+**.app 
+
 
 # LWC Jest
 **/__tests__/**
